--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,10 @@
   "author": "Marco Fiorito",
   "license": "MIT",
   "dependencies": {
-    "apollo-datasource-rest": "0.6.10",
-    "apollo-server": "2.9.14",
-    "graphql": "14.5.8"
+    "graphpack": "1.0.9"
+  },
+  "scripts": {
+    "dev": "graphpack",
+    "build": "graphpack build"
   }
 }
