--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-paper": "^3.4.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.22",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "4.0.10",
     "react-navigation-stack": "^1.10.3"
   },
