--- a/package.json
+++ b/package.json
@@ -10,32 +10,43 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.7.1",
+    "@types/lodash": "4.14.149",
+    "@types/react-redux": "7.1.5",
+    "add": "2.0.6",
+    "lodash": "4.17.15",
     "react": "16.9.0",
     "react-native": "0.61.1",
-    "react-native-gesture-handler": "^1.5.2",
-    "react-native-paper": "^3.4.0",
-    "react-native-reanimated": "^1.4.0",
-    "react-native-screens": "^2.0.0-alpha.22",
-    "react-native-vector-icons": "^6.6.0",
+    "react-native-gesture-handler": "1.5.2",
+    "react-native-paper": "3.4.0",
+    "react-native-reanimated": "1.4.0",
+    "react-native-screens": "2.0.0-alpha.22",
+    "react-native-vector-icons": "6.6.0",
     "react-navigation": "4.0.10",
-    "react-navigation-stack": "^1.10.3"
+    "react-navigation-stack": "1.10.3",
+    "react-redux": "7.1.3",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-persist": "6.0.0",
+    "redux-thunk": "2.3.0",
+    "yarn": "1.21.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "@types/jest": "^24.0.18",
-    "@types/react": "^16.9.3",
-    "@types/react-native": "^0.60.17",
-    "@types/react-test-renderer": "^16.9.0",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.5.0",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
-    "react-native-typescript-transformer": "^1.2.13",
+    "@babel/core": "7.6.2",
+    "@babel/runtime": "7.6.2",
+    "@react-native-community/eslint-config": "0.0.5",
+    "@types/jest": "24.0.18",
+    "@types/react": "16.9.3",
+    "@types/react-native": "0.60.17",
+    "@types/react-test-renderer": "16.9.0",
+    "babel-jest": "24.9.0",
+    "eslint": "6.5.0",
+    "jest": "24.9.0",
+    "metro-react-native-babel-preset": "0.56.0",
+    "react-native-typescript-transformer": "1.2.13",
     "react-test-renderer": "16.9.0",
-    "ts-jest": "^24.1.0",
-    "typescript": "^3.6.3"
+    "ts-jest": "24.1.0",
+    "typescript": "3.6.3"
   },
   "jest": {
     "preset": "react-native",
