--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-gesture-handler": "1.5.2",
+    "react-native-localization": "2.1.6",
     "react-native-paper": "3.4.0",
     "react-native-reanimated": "1.4.0",
     "react-native-responsive-screen": "1.3.0",
