--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/async-storage": "1.7.1",
     "@types/lodash": "4.14.149",
     "@types/react-redux": "7.1.5",
     "add": "2.0.6",
@@ -18,6 +18,7 @@
     "react": "16.9.0",
     "react-native": "0.61.1",
     "react-native-gesture-handler": "1.5.2",
+    "react-native-keyboard-aware-scroll-view": "0.9.1",
     "react-native-localization": "2.1.6",
     "react-native-paper": "3.4.0",
     "react-native-reanimated": "1.4.0",
