--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "1.5.2",
     "react-native-keyboard-aware-scroll-view": "0.9.1",
     "react-native-localization": "2.1.6",
+    "react-native-localize": "^1.3.1",
     "react-native-paper": "3.4.0",
     "react-native-reanimated": "1.4.0",
     "react-native-responsive-screen": "1.3.0",
