--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-reanimated": "1.4.0",
     "react-native-responsive-screen": "1.3.0",
     "react-native-screens": "2.0.0-alpha.22",
+    "react-native-secure-key-store": "^2.0.5",
     "react-native-segmented-control-tab": "^3.4.1",
     "react-native-vector-icons": "6.6.0",
     "react-navigation": "4.0.10",
