--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -187,7 +187,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
     compile project(':react-native-localization')
-
+    compile project(':react-native-secure-key-store')
+    
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
         debugImplementation files(hermesPath + "hermes-debug.aar")
